--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #1d1d1d;
   color: #f1f1f1;
-  font-family: Inter;
+  font-family: Arial;
   margin: 0;
   padding: 0;
   display: flex;
@@ -9,17 +9,12 @@ body {
   min-height: 100vh;
 }
 
-@font-face {
-  font-family: Inter;
-  src: url(fonts/Inter.ttf);
-}
-
 .spacer {
   height: 10vh;
 }
 
 * {
-  font-family: Inter;
+  font-family: Arial;
 }
 
 #app {
