--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ button {
 button:hover {
   scale: 1.05;
   background-color: #1e399a;
-}  
+}
 
 #chat-box {
   height: 300px; 
@@ -87,7 +87,6 @@ button:hover {
   padding: 20px;
   margin: 10px 0;
   border-radius: 8px;
-  border-radius: 30px;
   color: black;
 }
 
@@ -126,25 +125,24 @@ button:hover {
   background-color: #9c3131;
 }
 
+#room-options {
+  text-align: center;
+  margin: 10px auto;
+  font-size: 1.2em;
+}
+
+#room-options label,
+#room-options input {
+  font-size: 1.1em;
+  margin: 5px 0;
+}
+
 .footer {
   text-align: center;
   padding: 10px;
   color: #ccc;
   font-size: 21px;
   margin-top: auto;
-}
-
-.footer a {
-  color: #fff;
-  text-decoration: underline;
-}
-
-.footer a:hover {
-  color: #fff;
-}
-
-::-webkit-scrollbar {
-  width: 0;
 }
 
 .madeby {
@@ -164,4 +162,12 @@ button:hover {
   color: white;
   text-decoration: underline;
   text-underline-offset: 3px;
+}
+
+.madeby a:hover {
+  color: #fff;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
