--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ button {
 button:hover {
   scale: 1.05;
   background-color: #1e399a;
-}
+}  
 
 #chat-box {
   height: 300px; 
@@ -87,6 +87,7 @@ button:hover {
   padding: 20px;
   margin: 10px 0;
   border-radius: 8px;
+  border-radius: 30px;
   color: black;
 }
 
@@ -125,24 +126,25 @@ button:hover {
   background-color: #9c3131;
 }
 
-#room-options {
-  text-align: center;
-  margin: 10px auto;
-  font-size: 1.2em;
-}
-
-#room-options label,
-#room-options input {
-  font-size: 1.1em;
-  margin: 5px 0;
-}
-
 .footer {
   text-align: center;
   padding: 10px;
   color: #ccc;
   font-size: 21px;
   margin-top: auto;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.footer a:hover {
+  color: #fff;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
 
 .madeby {
@@ -164,10 +166,48 @@ button:hover {
   text-underline-offset: 3px;
 }
 
-.madeby a:hover {
-  color: #fff;
+/* Style for the toggle switch */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
 
-::-webkit-scrollbar {
+.switch input {
+  opacity: 0;
   width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+  border-radius: 50px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  border-radius: 50px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #4CAF50;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
 }
