--- a/style.css
+++ b/style.css
@@ -85,10 +85,11 @@ button {
 
 button:hover {
   scale: 1.05;
+  background-color: #122e93;
 }
 
 #chat-box {
-  height: 350px; 
+  height: 340px; 
   overflow-y: auto;
   background-color: white;
   padding: 20px;
