--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   margin: 20px auto;
   padding: 20px;
   border-radius: 30px;
-  background-color: #3d3d3d;
+  background-color: #000000;
   transition: 0.3s;
   transition: height 0.3s ease;
 }
